# git-push-check

./: .pre-commit-config.yaml  Cargo.toml  README.md  renovate.json5
.github/workflows/: ci.yaml
src/: main.rs
