[package]
name = "git-push-check"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to check if HEAD is pushed to remote"
readme = "README.md"
repository = "https://github.com/shunichironomura/git-push-check"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
git2 = "0.20.1"
log = "0.4.26"
